# simpandas

./: .gitignore  AUDIT_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER_MANUAL.md  FINAL_TEST_RUN.txt  FIX_PLAN_issue4_callable.md  FIX_SUGGESTIONS_simpandas.md  FIX_SUGGESTIONS_simpandas_followup.md  IMPLEMENTATION_SUMMARY.md  PROGRESS_REPORT.md  README.md  TEST_FIX_SUMMARY.md  UNYTS_DETAILED_FINDINGS_REPORT.md  UNYTS_ISSUE_REPORT.md  UNYTS_ISSUE_REPORT_2.md  USER_MANUAL.md  WHATS_NEW.md  pyproject.toml  simpandas_demo.ipynb  test_results.txt  test_set_index_units_shift.py  test_unyts_compatibility.py  tmp_debug.py
.github/: copilot-instructions.md
.github/skills/simpandas-maintainer/: SKILL.md
docs/: USER_GUIDE.md
scripts/: vdb_diagnostic.py  vdb_header_detail.py  vdb_record_structure.py  vdb_vardesc_detail.py
src/simpandas/: __init__.py  basics.py  basics_copy.py  errors.py  frame.py  frame_copy.py  index.py  indexer.py  series.py  writters.py
src/simpandas/_classes/: Errors.py  SimPandas.py  _simdataframe.py  _simlocindexer.py  _simseries.py  frame.py  indexer.py  series.py
src/simpandas/_common/: daterelated.py  helpers.py  math.py  merger.py  slope.py  stringformat.py  units.py
src/simpandas/_readers/: __init__.py  _xlsx.py
src/simpandas/classes/: frame.py  series.py
src/simpandas/common/: __init__.py  _internal_processes.py  compat.py  daterelated.py  filters.py  helpers.py  lazy_unyts.py  math.py  merger.py  renamer.py  shape.py  slope.py  stringformat.py  units.py
test/: TEST_VALIDATION_SUMMARY.md  __init__.py  manual_testing.py  test.py  test_audit_bugs.py  test_basics.py  test_bugfix_dca.py  test_ch4_coverage_gaps.py  test_errors.py  test_feature_validation.py  test_frame.py  test_index.py  test_indexer.py  test_missing_wrappers.py  test_new_features.py  test_regression.py  test_series.py  test_shortcuts.py  test_simpandas.py  test_simseries_plot.py  test_unit_preservation.py  test_unyts_compatibility.py  test_window_resample_query.py
test/_common/: test_daterelated.py  test_stringformat.py
test/_testing_data/: SAMPLE_PROD.SMSPEC  SAMPLE_PROD.UNSMRY  dimensions.xlsx  sample_prod.xlsx
test/classes/: test_series.py
test/common/: test_daterelated.py  test_filters.py  test_helpers.py  test_internal_processes.py  test_math.py  test_merger.py  test_renamer.py  test_shape.py  test_slope.py  test_stringformat.py  test_units.py
test/readers/: __init__.py  test_h5.py  test_parquet.py  test_prodml.py  test_resqml.py  test_schedule.py  test_summary.py  test_vdb.py  test_witsml.py  test_xlsx.py
test/writers/: __init__.py  test_csv_json.py  test_schedule.py  test_xlsx.py
(+23 files in other folders)
