[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simpandas"
version = "0.80.1"
authors = [
  { name="Martin Carlos Araya", email="martinaraya@gmail.com" },
]
description = "a Pandas wrapper extended to work with units and to deal with column names in eclipse simulator output style."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU GENERAL PUBLIC LICENSE Version 3",
    "Operating System :: OS Independent",
]
dependencies = [
    'numpy', 
    'pandas', 
    'matplotlib', 
    'fnmatch', 
    'datetime', 
    'shutil', 
    'warnings',
]

[project.urls]
"Homepage" = "https://github.com/ayaranitram/unyts"
"Bug Tracker" = "https://github.com/ayaranitram/unyts/issues"